--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GUESS THE NUMBER GAME</title>
     <link rel="stylesheet" href="css/STYLE.css">
     <link rel="stylesheet"  media="screen and (max-width:480px)" href="css/phone.css">
 </head>
